<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:padding="32dp"
    >

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:text="@string/trip_add"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/text_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/black"
        android:text="@string/trip_add_from"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/field_from"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_from"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/text_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/black"
        android:text="@string/trip_add_to"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/field_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/field_to"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_to"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/text_driver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/black"
        android:text="@string/trip_add_driver"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/field_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/field_driver"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_driver"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/black"
        android:text="@string/trip_add_status"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/field_driver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Spinner
        android:id="@+id/spinner_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_status"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        />

    <TextView
        android:id="@+id/text_eta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/black"
        android:text="@string/trip_add_eta"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/field_eta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_eta"
        android:inputType="text"
        />

    <Button
        android:id="@+id/button_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@android:color/white"
        android:text="@string/trip_add_button"
        android:elevation="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>