<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_logo_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LogoText"
        android:text="FACI"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_logo_2"
        app:layout_constraintBottom_toTopOf="@id/field_email"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/text_logo_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LogoText"
        android:text="O"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="@id/text_logo_1"
        app:layout_constraintStart_toEndOf="@id/text_logo_1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DefaultText"
        app:layout_constraintTop_toBottomOf="@id/text_logo_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/field_password"
        android:drawableStart="@drawable/ic_baseline_mail_outline_24"
        android:drawablePadding="8dp"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DefaultText"
        app:layout_constraintTop_toBottomOf="@id/field_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/checkbox"
        android:drawableStart="@drawable/ic_outline_lock_24"
        android:drawablePadding="8dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/field_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_action"
        android:text="@string/login_remember"
        />

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password_forgot"
        style="@style/PrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintBottom_toBottomOf="@id/checkbox"
        />

    <Button
        android:id="@+id/button_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_no_account"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login_button"
        android:elevation="16dp"
        />

    <TextView
        android:id="@+id/text_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_no_account"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/button_action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up_here"
        android:layout_marginStart="8dp"
        style="@style/PrimaryText"
        app:layout_constraintTop_toTopOf="@id/text_no_account"
        app:layout_constraintStart_toEndOf="@id/text_no_account"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>