<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="@android:color/white"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_logo_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LogoText"
        android:text="FACI"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_logo_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/text_logo_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LogoText"
        android:text="O"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="@id/text_logo_1"
        app:layout_constraintStart_toEndOf="@id/text_logo_1"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_welcome"
        style="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@id/text_logo_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_header"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/text_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_add"
        android:layout_marginTop="24dp"
        style="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/trip_list_item"
        tools:itemCount="2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>